# tradfri-indicator

./: .mypy.ini  .pre-commit-config.yaml  README.md  pyproject.toml  tradfri-indicator.py
tradfri_indicator/: __main__.py
