[tool.poetry]
authors = ["Jonas Bushart <jonas@bushart.org>"]
description = "AppIndicator to control Tradfri Lamps"
name = "tradfri-indicator"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.10"
pytradfri = "^11.0.0"
ratelimit = "^2.2.1"
zeroconf = "^0.38.0"

[tool.poetry.dev-dependencies]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
